--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test -- --watchAll=false
+      # - name: Run tests
+      #   run: npm test -- --watchAll=false
 
       - name: Build
         run: npm run build
